# AppServer

./: .gitignore  AppServer-win.code-workspace  AppServer.code-workspace  AppServer.json  CMakeLists.txt  CMakePresets.json  app-server-build.sh  meta.json
config/: App.Server.json  App.Server.jsonnet  AppServer.json  app-meta.jsonnet  args.libsonnet  log-meta.jsonnet  logging-meta.jsonnet  meta.json
config/sql/sqlServer/: log_app_insert.sql  log_app_instance_insert.sql  log_message_insert.sql
config/win/debug/: args.libsonnet
scripts/: app-server-build.sh
source/: AppServer.code-workspace  AppServer.sln  AppServer.vcxproj  AppServer.vcxproj._user  AppServer.vcxproj.filters  AppStartupAwait.cpp  AppStartupAwait.h  CMakeLists.txt  Cache.cpp  Cache.h  CertificateLogin.cpp  CertificateLogin.h  ExternalLogger.cpp  ExternalLogger.h  GoogleLogin.cpp  GoogleLogin.h  HttpRequestAwait.cpp  HttpRequestAwait.h  Listener.cpp  Listener.cpp_  Listener.h  Listener.h_  LogClient.cpp  LogClient.cpp_  LogClient.h  LogClient.h_  LogData.cpp  LogData.h  Makefile  Rest.cpp  Rest.cpp_  Rest.h  Rest.h_  ResultsMessage.h  Sender.cpp  Sender.h  Server.cpp  Server.h  ServerSocketSession.cpp  ServerSocketSession.h  (+20 more)
source/await/: CertificateLoginAwait.cpp  CertificateLoginAwait.h  CustomRequestAwait.cpp  CustomRequestAwait.h  ForwardExecutionAwait.cpp  ForwardExecutionAwait.h  GraphQLAwait.cpp  GraphQLAwait.h
source/awaits/: CertificateLoginAwait.cpp  CertificateLoginAwait.h  ForwardExecutionAwait.cpp  ForwardExecutionAwait.h  GraphQLAwait.cpp  GraphQLAwait.h
source/graphQL/: AppInstanceHook.cpp  AppInstanceHook.h
source/types/: FromServerMessage.h
source/types/proto/: AppFromClient.proto  AppFromServer.proto  FromClient.proto  FromServer.proto
source/types/rest/: json.h
sql/: log_application_insert.ms.sql  log_application_insert.sql  log_application_instance_insert.ms.sql  log_application_instance_insert.sql  log_message_insert.ms.sql  log_message_insert.sql  um_provider_purge.ms.sql  um_provider_purge.sql  um_providers_ql.ms.sql  um_providers_ql.sql  um_user_insert.ms.sql  um_user_insert.sql  um_user_insert_key.ms.sql  um_user_insert_key.sql  um_user_insert_login.ms.sql  um_user_insert_login.sql
sql/mysql/: log_app_insert.sql
sql/sqlServer/: log_application_insert.sql
tests/: CMakeLists.txt  DBTests.cpp  Tests.AppServer.json  Tests.AppServer.vcxproj  Tests.AppServer.vcxproj._user  Tests.AppServer.vcxproj.filters  ThreadingTest.cpp  build.sh  main.cpp  pc.h
tests/um/: GroupTests.cpp  UserTests.cpp
